WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100691
[Chromium] flickering observed when copying 2D canvas to webGL texture
https://bugs.webkit.org/show_bug.cgi?id=100691
Summary
[Chromium] flickering observed when copying 2D canvas to webGL texture
Justin Novosad
Reported
2012-10-29 11:15:20 PDT
[Chromium] flickering observed when copying 2D canvas to webGL texture
Attachments
Patch
(2.90 KB, patch)
2012-10-29 11:25 PDT
,
Justin Novosad
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Justin Novosad
Comment 1
2012-10-29 11:25:51 PDT
Created
attachment 171283
[details]
Patch
Stephen White
Comment 2
2012-10-29 12:32:25 PDT
Comment on
attachment 171283
[details]
Patch Looks good. Thanks for tracking this down. r=me
WebKit Review Bot
Comment 3
2012-10-29 12:37:36 PDT
Comment on
attachment 171283
[details]
Patch Clearing flags on attachment: 171283 Committed
r132839
: <
http://trac.webkit.org/changeset/132839
>
WebKit Review Bot
Comment 4
2012-10-29 12:37:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug