[Chromium] flickering observed when copying 2D canvas to webGL texture https://bugs.webkit.org/show_bug.cgi?id=100691

Reviewed by Stephen White.

Source/WebCore:

Added a flush to the webgl context after texture upload from an image
buffer to ensure proper graphics context synchronization with respect
to subsequent changes to the source image.

Tests: fast/canvas/webgl/canvas-2d-webgl-texture.html

* platform/graphics/skia/ImageBufferSkia.cpp:
(WebCore::ImageBuffer::copyToPlatformTexture):

LayoutTests:

Modified test by adding a canvas draw imediately after webgl texture
upload in order to exercise graphics context synchronization between
the webGL and 2D canvas graphics contexts.

* fast/canvas/webgl/canvas-2d-webgl-texture.html:


Canonical link: https://commits.webkit.org/118723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132839 268f45cc-cd09-0410-ab3c-d52691b4dbfc